# mtb_suspension_analyzer

./: CMakeLists.txt  README.md  _config.yml  circuit.fzz  main.c  msa.c  prepare_build.sh  raspberry_pico_env_config.sh  upload.sh
backup_central_unit/old_code/: display_example.h
backup_old_versions/old_central_unit_files/: bluetooth.cpp  tof.cpp
calibration_and_debug/: i2c_debug.c
central_unit/: bluetooth.cpp  central_unit.ino  controller.cpp  controller.h  display.cpp  display.h  imu.cpp  imu.h  joystick.cpp  mcp7940.h  platformio.ini  tof.cpp  tof.h
central_unit/src/: ds3231.cpp  ds3231.h  main.cpp  mpu6050.cpp  mpu6050.h
diagrams/: circuit.fzz
doc/: msa.fdb_latexmk  msa.fls  msa.tex
documents/: Untitled Sketch.fzz
fw/: flash_fw_guide.md
msa/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  controller.cpp  controller.h  display.cpp  i2c_debug.c  imu.c  imu.cpp  imu.h  imu_calibration.c  main.c  msa.c  msa.ino  pins.h  tof.cpp  tof.h  travel.cpp  travel.h  types.h
multicore/: multicore.c
old_central_unit_files/: controller.cpp  controller.h  imu.cpp
old_code/: display_example.cpp
secondary_unit/: secondary_unit.ino
site/: Gemfile
site/_posts/: 2023-03-28-welcome-to-jekyll.markdown
src/: bluetooth.c  controller.c  display.c  imu.c  imu.h  main.c  tof.c
ssd1306_display/: CMakeLists.txt  ssd1306_display.c  ssd1306_display.h
tests/: try.c
useful_code/: joystick.h
